--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -17,6 +17,7 @@
 - [#731] Improve tab Increments. Separate the tab on two: Increments and Preview Calculation.
 - Removed crash sending system for Windows.
 - Added new language Polish (Poland).
+- [#755] New feature. Toggle point label.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
