--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,6 +20,7 @@
 - [#755] New feature. Toggle point label.
 - Fixed bug. After full parse undocommand Move labe losts connection to tool.
 - [#756] New feature. Select pieces from command line.
+- [#761] New feature. Export final measurements.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
