--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -21,6 +21,7 @@
 - Fixed bug. After full parse undocommand Move labe losts connection to tool.
 - [#756] New feature. Select pieces from command line.
 - [#761] New feature. Export final measurements.
+- [#758] Intersection Passmark - select which side is shown.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
