--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -62,6 +62,7 @@
 - Remove space as thousands separator when return formula to user.
 - [#752] Valentina produces corrupted file if unite two pieces.
 - [#753] Elliptical arc tool is broken.
+- [#767] Valentina produces wrong main path.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
