--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -25,6 +25,7 @@
 - New math parser function "r2cm". Round to up to 1 decimal.
 - Two new shortcut sequences: Ctrl+PgDown and Ctrl+PgUp to switch to next and previous pattern piece.
 - [#765] New feature. Free curve mode.
+- [#657] Improve feature: Allow more paper formats for printing tiled PDF
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
