--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -64,6 +64,7 @@
 - [#752] Valentina produces corrupted file if unite two pieces.
 - [#753] Elliptical arc tool is broken.
 - [#767] Valentina produces wrong main path.
+- Fix issue. Curves look too wavy.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
