Resolved issue #726. Improve Move tool. Add optional rotate option.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -30,6 +30,7 @@
 - [#759] Add place label tool.
 - [#771] Improve tool Point at intersection of arc and line.
 - [#772] New tool Duplicate detail.
+- [#726] Improve Move tool. Add optional rotate option.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
