Resolved issue #792. New feature. Visibility trigger for internal path.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -35,6 +35,7 @@
 - [#779] Add more roll paper size templates.
 - [#783] Flipping control.
 - [#790] Generate unique name for each detail.
+- [#792] New feature. Visibility trigger for internal path.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
