--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -81,6 +81,7 @@
 - [#776] Valentina cannot recognize translated functions.
 - [#778] Calling Valentina with "-h" option opens information dialog instead of writing to console.
 - [#788] Unhardcode icon path in GNU/Linux launcher.
+- [#797] Custom seam allowance ignored in some cases.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
