Resolved issue #732. Tape app. Improve Database dialog.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -39,6 +39,7 @@
 - New internal variable RotationElArc.
 - [#794] Better control over scale value.
 - [#392] Improve feature: Show progress bar while opening pattern file.
+- [#732] Tape app. Improve Database dialog.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
