Resolved issue #808. New feature. Global line width option.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -44,6 +44,7 @@
 - [#414] Add features from Qt Windows Extras.
 - [#807] Issue with "Intersection" passmark.
 - [#667] Check for updates - Test version.
+- [#808] New feature. Global line width option.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
