Fixed issue #814. Make "\" valid character.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -45,6 +45,7 @@
 - [#807] Issue with "Intersection" passmark.
 - [#667] Check for updates - Test version.
 - [#808] New feature. Global line width option.
+- [#814] Make "\" valid character.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
