Fixed issue #823. SVG Export - seam and cutting line of one piece missing. (grafted from 56c6ae623ed101a1e3276bc4a0ab5f6102ebae41)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -95,6 +95,7 @@
 - [#798] Formula Wizard crashes with translated increments.
 - [#803] Bug in FancyTabBar widget. Wrongly calculated widget width.
 - [#805] Invalid regular expression for validation layout output filename mask.
+- [#823] SVG Export - seam and cutting line of one piece missing.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
