--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -52,6 +52,7 @@
 - Mouse double click zoom fit best current pattern piece.
 - [#862] Force Valentina to immediately terminate if a pattern contains a parsing warning.
 - [#865] New feature. Dynamic Way to define Material in piece label.
+- [#867] Visibility control for place labels.
 
 # Version 0.5.1 (unreleased)
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
