--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -54,6 +54,7 @@
 - [#865] New feature. Dynamic Way to define Material in piece label.
 - [#867] Visibility control for place labels.
 - [#868] New feature. Connect internal path with cutting contour.
+- [#869] Pattern piece label size limited.
 
 # Version 0.5.1 (unreleased)
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
