Fixed issues with seam allowance. (grafted from 79a6fe52de80fc8707e24574eff1ec75eb1cd424)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,6 @@
 # Version 0.6.1 (unreleased)
 - [#885] Regression. Broken support for multi size measurements.
+- Fixed issues with seam allowance.
 
 # Version 0.6.0 October 1, 2018
 - [#682] New feature. Export increments to Excel .csv.
