Fixed issue #890. Menu Windows->Close pattern doesn't clear "Group of visibility" list. (grafted from 36be0b8fc57d31b2cf949adc86c713e85bfd0cb3)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 # Version 0.6.1 (unreleased)
 - [#885] Regression. Broken support for multi size measurements.
 - Fixed issues with seam allowance.
+- [#890] Menu Windows->Close pattern doesn't clear "Group of visibility" list.
 
 # Version 0.6.0 October 1, 2018
 - [#682] New feature. Export increments to Excel .csv.
