Resolved issue #894. Quick way to disable a passmark.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,6 @@
 # Version 0.7.0 (unreleased)
 - [#892] Show tooltip for piece node point.
+- [#894] Quick way to disable a passmark.
 
 # Version 0.6.1 (unreleased)
 - [#885] Regression. Broken support for multi size measurements.
