Fixed issue #912. Labels in inactive state return to initial color. (grafted from b222072d66ff164252223728d913226b500df73a)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,7 @@
 - [#903] Bug in tool Cut Spline path.
 - [#905] Valentina crashes with error: This id is not unique.
 - [#909] Valentina produces wrong united path.
+- [#912] Labels in inactive state return to initial color.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
