Fixed issue #915. Valentina produces wrong seam allowance for acute angle. (grafted from 41a93a0a57ac2dcc731563b7eb759bfa2bc2961e)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@
 - [#912] Labels in inactive state return to initial color.
 - [#913] Unable to save changes for piece path if it doesn't contain a point.
 - [#914] Filtering custom seam allowance paths prevent including more than one.
+- [#915] Valentina produces wrong seam allowance for acute angle.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
