--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@
 - [#894] Quick way to disable a passmark.
 - [#895] Improve path validation. Do not allow repeat the same curve twice.
 - Improve UI. Make placeholder menu scrollable.
+- [#651] Improve feature: Layout orientation according to grainline.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
