--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@
 - Improve UI. Make placeholder menu scrollable.
 - [#651] Improve feature: Layout orientation according to grainline.
 - New command line option --landscapeOrientation.
+- Added ability to search measurements by regex.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
