Fixed issue #924. Valentina produces wrong passmark for rollback case. (grafted from 5ff3a91f41efebed4963d3377cb2f194983cc7f7)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,7 @@
 - [#914] Filtering custom seam allowance paths prevent including more than one.
 - [#915] Valentina produces wrong seam allowance for acute angle.
 - [#923] Valentina produces wrong seam allowance for rollback case.
+- [#924] Valentina produces wrong passmark for rollback case.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
