--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,7 @@
 - Added ability to search measurements by regex.
 - [#927] Freeze prefix language on pattern/project creation.
 - [#929] New variable type: Separator.
+- Speed optimization for switching "In layout" state.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
