--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,7 @@
 - [#927] Freeze prefix language on pattern/project creation.
 - [#929] New variable type: Separator.
 - Speed optimization for switching "In layout" state.
+- [#932] 2nd version V passmarks.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
