Fixed issue #939. Calling Formula Wizard through property explorer doesn't refresh formula. (grafted from f709c6b0f99abc0c6370bbb37c69eaccbe47a81a)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -24,6 +24,7 @@
 - [#930] Valentina doesn't update translation for variables after dynamic language switch.
 - [#931] Variable translation for Greek and Chinese are broken.
 - [#938] Dialog Seam Allowance doesn't block user from saving broken formula.
+- [#939] Calling Formula Wizard through property explorer doesn't refresh formula.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
