--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -26,6 +26,7 @@
 - [#938] Dialog Seam Allowance doesn't block user from saving broken formula.
 - [#939] Calling Formula Wizard through property explorer doesn't refresh formula.
 - [#937] Wrong symmetrical seam corners on pieces.
+- [#942] Save Layout mode ignores paper format for tiled PDF.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
