Fixed issue #955. Valentina corrupts file. (grafted from 8e9fc213aa8018ebcf889cc9baa3f08a31b4e423)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -29,6 +29,7 @@
 - [#937] Wrong symmetrical seam corners on pieces.
 - [#942] Save Layout mode ignores paper format for tiled PDF.
 - [#954] Valentina produces empty rotation operation.
+- [#955] Valentina corrupts file.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
