--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -30,6 +30,7 @@
 - [#942] Save Layout mode ignores paper format for tiled PDF.
 - [#954] Valentina produces empty rotation operation.
 - [#955] Valentina corrupts file.
+- [#956] Setting pattern unit doesn't change combobox value in Tape app.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
