Resolved issue #916. Improve layout generation.
--HG--
branch : feature

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -12,6 +12,7 @@
 - [#932] 2nd version V passmarks.
 - [#936] Improve list of predefined paper size formats for layout export. Added format Tabloid.
 - Extend Label language to support Czech alphabet.
+- [#916] Improve layout generation. 
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
