Fixed issue #962. Failed to load LibEGL. (grafted from 00df5fb5dbb90630a40053aef89194163853288d)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -34,6 +34,7 @@
 - [#955] Valentina corrupts file.
 - [#956] Setting pattern unit doesn't change combobox value in Tape app.
 - [#957] Unable to cut an arc with negative length.
+- [#962] Failed to load LibEGL.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
