Fixed issue #964. Assign operator crashes math parser. (grafted from 9fd845b77249b4edc1bdc0a42dc4b32fb5f036f6)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -36,6 +36,7 @@
 - [#957] Unable to cut an arc with negative length.
 - [#962] Failed to load LibEGL.
 - [#963] Bug in tool Point intersect curve and axis.
+- [#964] Assign operator crashes math parser.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
