Fixed issue #966. Unable to control Approximation scale for arc with length. (grafted from 758fe0d016a641b390f431447cff60d7c93961c8)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -38,6 +38,7 @@
 - [#962] Failed to load LibEGL.
 - [#963] Bug in tool Point intersect curve and axis.
 - [#964] Assign operator crashes math parser.
+- [#966] Unable to control Approximation scale for arc with length.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
