--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -42,6 +42,7 @@
 - [#964] Assign operator crashes math parser.
 - [#966] Unable to control Approximation scale for arc with length.
 - [#967] Variable must not include new line character.
+- German translation for Inno setup script.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
