Resolved issue #969. Fix length to label after soom.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,7 @@
 - [#965] Control passmark length with formula.
 - New placelabel shape Circle.
 - Two new passmark types: U and Box.
+- [#969] Fix length to label after soom.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
