Move Tool options and Group menu to Window section.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -18,6 +18,7 @@
 - Two new passmark types: U and Box.
 - [#969] Fix length to label after soom.
 - [#725] Improve labels on drawing.
+- Move Tool options and Group menu to Window section.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
