--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,6 +19,7 @@
 - [#969] Fix length to label after soom.
 - [#725] Improve labels on drawing.
 - Move Tool options and Group menu to Window section.
+- Raise the minimum value for curve approximation to 0.2.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
