--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -23,6 +23,7 @@
 - Make piece labels transparent.
 - New layout option --nestQuantity.
 - New feature Pattern recipe.
+- New options to hide all/show all visibility groups.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
