New feature "Hide piece's main path".
In some cases users want to hide main path and work with "real" pattern pieces.
This new option allows to quickly disable main path for all pieces without need
to make manual adjustment for each piece. Do not ovveride piece options.

--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -24,6 +24,7 @@
 - New layout option --nestQuantity.
 - New feature Pattern recipe.
 - New options to hide all/show all visibility groups.
+- New feature "Hide piece's main path".
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
