Allow controlling priority selecting pieces in layout.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -25,6 +25,7 @@
 - New feature Pattern recipe.
 - New options to hide all/show all visibility groups.
 - New feature "Hide piece's main path".
+- Allow controlling priority selecting pieces in layout.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
