Breaking change. All intersections are now treaded as a loop.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -27,6 +27,7 @@
 - New feature "Hide piece's main path".
 - Allow controlling priority selecting pieces in layout.
 - No scissors on tiled PDF bottom row.
+- All intersections are now treaded as a loop.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
