--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -28,6 +28,7 @@
 - Allow controlling priority selecting pieces in layout.
 - No scissors on tiled PDF bottom row.
 - All intersections are now treaded as a loop.
+- [#558] New export: Export pattern as step-by-step text.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
