Fixed issue #978. Don't show errors in History dialog.
Showing error messages instead of tool record can confuse a user. Additionally
it may create issues with a caret (feature insert after).
(grafted from 33a0a02a8ff5904b0226cbc1e94f36619db45212)

--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -64,6 +64,7 @@
 - Changing settings for move and rotate tools through property browser does not take in count previous change for label point and Show label option.
 - Fix locking file after double save as.
 - Key --ignoremargins still required margins.
+- [#978] Don't show errors in History dialog.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
