Resolved issue #984. Special variable "CurrentLength" for tools Cut Arc, Cut Spline and Cut Spline Path.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -33,6 +33,7 @@
 - Improve for recent files list. Show duplicate file names with unique path section.
 - New command line option --cropWidth. Helps to crop unused width of paper.
 - New feature Pattern Messages.
+- [#984] Special variable "CurrentLength" for tools Cut Arc, Cut Spline and Cut Spline Path.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
