Export tiled PDF with watermark.
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -35,6 +35,7 @@
 - New feature Pattern Messages.
 - [#984] Special variable "CurrentLength" for tools Cut Arc, Cut Spline and Cut Spline Path.
 - Added a ruler at the bottom of a tiled PDF document.
+- Export tiled PDF with watermark.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
