Fix crash after uniting three pieces in sequence. (grafted from 7f649df048328d449e1de01794d238eeef0c39be)
--HG--
branch : develop

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -72,6 +72,7 @@
 - [#978] Don't show errors in History dialog.
 - Fixed translation numbers in scientific notation.
 - Fix dialog for tool Point along perpendicular. No memory of line color settings. 
+- Fix crash after uniting three pieces in sequence.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
