--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -37,6 +37,7 @@
 - Added a ruler at the bottom of a tiled PDF document.
 - Export tiled PDF with watermark.
 - [#984] Issue with up to date list of unique names.
+- Tracking changes/prevent "OK" recalculation after "Apply".
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
