--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -40,6 +40,7 @@
 - Tracking changes/prevent "OK" recalculation after "Apply".
 - Change behavior for menu Pattern piece -> Show main path. Now it has an influence on export as well.
 - Call Piece Options and Delete Piece from the piece list context menu.
+- Change default values for grainline length and pattern label size to 10 cm.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
