--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -43,6 +43,7 @@
 - Change default values for grainline length and pattern label size to 10 cm.
 - Tool Point at distance and angle now allows negative length.
 - Export pattern to DXF-ASTM.
+- [smart-pattern/valentina#18] Auto-created Visibility Group for group operation.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
