--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -46,6 +46,7 @@
 - [smart-pattern/valentina#18] Auto-created Visibility Group for group operation.
 - Setting scale factor for export and print.
 - New layout generator option: Prefer one sheet solution.
+- [smart-pattern/valentina#15] Organization of groups - groups categories
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
