Improve the property browser. Show full arc name.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -47,6 +47,7 @@
 - Setting scale factor for export and print.
 - New layout generator option: Prefer one sheet solution.
 - [smart-pattern/valentina#15] Organization of groups - groups categories
+- Improve the property browser. Show full arc name. 
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
